# grok-desktop

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  .oxlintrc.json  AGENTS.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  buf.gen.go.yaml  deny.toml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: accessibility.yml  bug.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  finalize-manual-release.yml  guard-master.yml  manual-version-bump.yml  qualify-release-candidate.yml  release-build.yml  release-candidate.yml  release-please.yml  release-prerequisites.yml  release.yml
apps/desktop/: DESIGN.md  buf.gen.yaml  index.html  package.json  tsconfig.electron.build.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
crates/grok-acp/: Cargo.toml
crates/grok-acp/src/: catalog.rs  component.rs  isolation.rs  lib.rs  permission.rs  pinned.rs  runtime.rs
crates/grok-acp/tests/: acp_contract.rs
crates/grok-acp/tests/fixtures/: fake_grok.rs
crates/grok-application/: Cargo.toml
crates/grok-application/src/: agent_runtime.rs  approvals.rs  artifacts.rs  automation_scheduler.rs  capabilities.rs  chat_models.rs  chat_rail.rs  conversation.rs  credential_enrollment.rs  credentials.rs  effects.rs  error.rs  grok_build_auth.rs  host_tools.rs  isolation.rs  isolation_runtime.rs  lib.rs  managed_integrations.rs  models.rs  mutations.rs  ports.rs  preferences.rs  privileged_gateway.rs  privileged_operations.rs  runs.rs  supergrok_oauth.rs  usage_summary.rs  vault.rs  workspace.rs
crates/grok-artifact-storage/: Cargo.toml
crates/grok-artifact-storage/src/: lib.rs  linux.rs  linux_ga_qualification.rs
crates/grok-credential-enrollment/: Cargo.toml
crates/grok-credential-enrollment/src/: lib.rs  linux_ga_qualification.rs  unix.rs  windows.rs
crates/grok-daemon/: Cargo.toml
crates/grok-daemon/src/: handler.rs  host_tool_bridge.rs  host_work_runtime.rs  host_work_service.rs  lib.rs  linux_guest_transport.rs  linux_isolation_probe.rs  main.rs  managed_integration.rs  transport.rs
crates/grok-daemon/src/linux_guest_transport/: scheduled.rs
crates/grok-daemon/tests/: conversation_recovery_startup.rs  ipc_round_trip.rs  privileged_recovery_startup.rs  startup_security.rs
crates/grok-domain/: Cargo.toml
crates/grok-domain/src/: approval.rs  automation.rs  capability.rs  conversation.rs  effect.rs  host_execution.rs  id.rs  lib.rs  preferences.rs  privileged_operation.rs  run.rs  workspace.rs
crates/grok-host-tools/: Cargo.toml
crates/grok-host-tools-mcp/: Cargo.toml
crates/grok-host-tools/src/: lib.rs
crates/grok-host-tools/tests/: filesystem.rs
crates/grok-memory/: Cargo.toml
crates/grok-memory/src/: lib.rs  managed_integrations.rs
crates/grok-memory/tests/: conversation_uncertain_output.rs
crates/grok-protocol/: Cargo.toml  build.rs
crates/grok-protocol/src/: convert.rs  lib.rs  validation.rs
crates/grok-sqlcipher/: Cargo.toml
crates/grok-sqlcipher/src/: artifact_store.rs  automation_scheduler_store.rs  chat_model_preferences_store.rs  conversation_store.rs  credential_store.rs  lib.rs  managed_integration_store.rs  mapping.rs  preferences_store.rs  privileged_operation_store.rs  schema.rs  store.rs  workspace_store.rs
crates/grok-sqlcipher/tests/: artifact_store.rs  conversation_representability.rs  conversation_store_security.rs  managed_integration_store.rs  persistence.rs  usage_summary.rs
crates/grok-vault/: Cargo.toml
crates/grok-vault/src/: lib.rs
crates/grok-vm-service-client/: Cargo.toml
crates/grok-vm-service-client/src/: lib.rs  platform.rs  service_policy.rs  transport.rs  windows_identity.rs
crates/grok-windows-acl/: Cargo.toml
crates/grok-windows-acl/src/: lib.rs  windows.rs
crates/grok-xai/: Cargo.toml
crates/grok-xai/src/: lib.rs  oauth.rs  sse.rs
docs/: README.md
docs/architecture/: modules.md  overview.md  principles.md  protocol-and-persistence.md
docs/decisions/: 0001-system-architecture.md  0002-grok-only-integrations.md  0003-managed-execution.md  0004-daemon-owned-credentials-and-capabilities.md  0005-native-credential-enrollment.md  0006-durable-direct-chat-turns.md  0007-daemon-owned-desktop-preferences.md  0008-resumable-run-event-long-poll.md  0009-daemon-owned-xai-chat-model-selection.md  0010-daemon-owned-workspace-search-routing.md  0011-remove-renderer-execution-producer-authority.md  0012-versioned-desktop-deep-links.md  0013-durable-async-chat-events.md  0014-strict-external-url-broker.md  0015-safe-direct-chat-retry-lineage.md  0016-daemon-owned-conversation-forks.md  0017-durable-conversation-fork-delivery.md  0018-remove-public-artifact-metadata-producer-authority.md  0019-private-atomic-backup-publication.md  0020-remove-public-message-mutation-authority.md  0021-remove-artifact-storage-path-projection.md  0022-daemon-owned-artifact-import-and-open.md  0023-linux-private-artifact-content-and-fd-open.md  0024-daemon-owned-artifact-removal-and-retention.md  0025-daemon-owned-automation-scheduler-journal.md  0026-daemon-owned-supergrok-api-chat-rail.md  0027-durable-signed-managed-integration-lifecycle.md  0028-durable-conversation-model-binding.md  0029-local-usage-summary-ipc.md  0030-signed-public-update-channels.md  0031-durable-official-xai-search.md  0032-explicit-dual-mode-work-execution.md  0033-source-pinned-official-grok-build-component.md  0034-unsigned-windows-core-installer.md  README.md
docs/development/: coding-guidelines.md  debugging-and-qa.md  local-development.md  releasing.md
docs/plan/: 01-review-findings.md  (+8 more)
integrations/: README.md  catalog.example.json
scripts/: check-integration-schemas.sh  linux-ga-evidence.sh  release-candidate.mjs  release-candidate.test.mjs  release-policy.mjs  release-policy.test.mjs  release-workflow-contract.test.mjs  stage-release-assets.mjs  stage-release-assets.test.mjs  sync-release-version.mjs  sync-release-version.test.mjs
(+348 files in other folders)
