[workspace]
resolver = "2"
members = [
    "crates/grok-artifact-storage",
    "crates/grok-application",
    "crates/grok-acp",
    "crates/grok-daemon",
    "crates/grok-credential-enrollment",
    "crates/grok-domain",
    "crates/grok-host-tools-mcp",
    "crates/grok-host-tools",
    "crates/grok-memory",
    "crates/grok-protocol",
    "crates/grok-sqlcipher",
    "crates/grok-vault",
    "crates/grok-vm-service-client",
    "crates/grok-windows-acl",
    "crates/grok-xai",
]

[workspace.package]
version = "0.0.8"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false
rust-version = "1.95"

[workspace.dependencies]
async-trait = "0.1.89"
async-stream = "0.3.6"
agent-client-protocol = "1.2.0"
bytes = "1.11.1"
cap-std = "4.0.2"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10.4"
directories = "6.0.0"
eventsource-stream = "0.2.3"
fs2 = "0.4.3"
futures-core = "0.3.32"
futures-util = "0.3.32"
getrandom = "0.4.3"
keyring = "4.1.4"
prost = "0.14.3"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "json", "rustls", "stream"] }
rustix = { version = "1.1.4", default-features = false, features = ["process", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["compat", "rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.21.0", features = ["v4"] }
url = "2.5.7"
zeroize = "1.8.2"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
