[package]
name = "grok-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agent-client-protocol.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
futures-util.workspace = true
fs2.workspace = true
grok-application = { path = "../grok-application", version = "0.0.11" }
hex = "0.4.3"
libc = "0.2.183"
process-wrap = { version = "9.1.0", features = ["tokio1"] }
same-file = "1.0.6"
semver = "1.0.27"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
grok-windows-acl = { path = "../grok-windows-acl", version = "0.0.11" }

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
