[package]
name = "grok-credential-enrollment"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
grok-application = { path = "../grok-application", version = "0.0.13" }
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(unix)'.dependencies]
rustix.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "sync", "time"] }
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security_Credentials",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
