[package]
name = "grok-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
debug-acp-descriptor = []
debug-linux-vm-service = []

[dependencies]
async-trait.workspace = true
directories.workspace = true
futures-util.workspace = true
grok-acp = { path = "../grok-acp", version = "0.0.9" }
grok-artifact-storage = { path = "../grok-artifact-storage", version = "0.0.9" }
grok-application = { path = "../grok-application", version = "0.0.9" }
grok-credential-enrollment = { path = "../grok-credential-enrollment", version = "0.0.9" }
grok-domain = { path = "../grok-domain", version = "0.0.9" }
grok-host-tools = { path = "../grok-host-tools", version = "0.0.9" }
grok-memory = { path = "../grok-memory", version = "0.0.9" }
grok-protocol = { path = "../grok-protocol", version = "0.0.9" }
grok-sqlcipher = { path = "../grok-sqlcipher", version = "0.0.9" }
grok-vault = { path = "../grok-vault", version = "0.0.9" }
grok-vm-service-client = { path = "../grok-vm-service-client", version = "0.0.9" }
grok-xai = { path = "../grok-xai", version = "0.0.9" }
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["fs", "net"] }

[target.'cfg(windows)'.dependencies]
grok-windows-acl = { path = "../grok-windows-acl", version = "0.0.9" }

[lints]
workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile = "3.27.0"
