[package]
name = "grok-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
grok-application = { path = "../grok-application", version = "0.0.1" }
grok-domain = { path = "../grok-domain", version = "0.0.1" }
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
