[package]
name = "grok-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Operating-system credential vault adapter for Grok Desktop"

[dependencies]
getrandom.workspace = true
grok-application = { path = "../grok-application", version = "0.0.8" }
keyring.workspace = true
zeroize.workspace = true

[lints]
workspace = true

