[package]
name = "grok-vm-service-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Fail-closed Rust client for the narrow Grok Desktop Windows VM service"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
grok-application = { path = "../grok-application", version = "0.0.5" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
