[package]
name = "grok-xai"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Official xAI API adapter for Grok Desktop"

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures-util.workspace = true
grok-application = { path = "../grok-application", version = "0.1.0" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true

