[package]
name = "grok-xai"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
description = "Official xAI API adapter for Grok Desktop"

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
futures-util.workspace = true
getrandom.workspace = true
grok-application = { path = "../grok-application", version = "0.0.1" }
reqwest = { workspace = true, features = ["form"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
thiserror.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
